# enCiphey

./: README.md  encipher.py  noobarmy_.txt  pyproject.toml
.github/workflows/: tests.yml
src/: README.md  Untitled.ipynb  encipher.py  encipher_crypto.py  enciphey.py  generate_freq_distrib.py  main.ipynb
tests/: test_encryptions.py  tests.py
