[tool.poetry]
name = "encipher"
version = "0.1.0"
description = "Randomly encrypts text"
authors = ["Brandon <brandonskerritt51@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
