[tool.poetry]
name = "enciphey"
version = "0.1.0"
description = "Randomly chooses an encryption"
authors = ["Brandon <brandon@skerritt.blog>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
